Improve comment style on mobile; fix grey timestamps.

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -412,7 +412,7 @@ h6 small,
 .h6 small {
   font-weight: normal;
   line-height: 1;
-  color: #999999;
+  color: inherit;
 }
 h1,
 h2,
